# partition_old

./: .hgignore  CMakeLists.txt  msvc2010-x86-generate.bat
airplay/: PartitionAirplay.defines.txt  PartitionAirplay.mkb  PartitionMain.cpp
base/: Ball.cpp  Ball.h  Game.cpp  Game.h  Geometry.h  Image.h  Utils.h  definitions.h
base/airplay/: Geometry.cpp  Utils.cpp  UtilsAirplay.cpp  UtilsAirplay.h  types.h
base/qt/: Geometry.cpp  Utils.cpp  UtilsQt.cpp  UtilsQt.h  types.h
data/: Iw2DStrings.group  app.icf  development.icf  trebuchet.gxfont  trebuchet.tga
game/: CMakeLists.txt
game/qt/: CMakeLists.txt  PartitionGame.ui  PartitionGameWindow.cpp  PartitionGameWindow.h  PartitionMainWindow.cpp  PartitionMainWindow.h
